# cpp-unit-tests-practice

./: CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt  HelloWorld.cpp  HelloWorld.h  LinkedList.h  LinkedListSentinel.h  LinkedListSimple.h  LinkedListWithSentinelNode.h  List.h  MathFunctions.cpp  MathFunctions.h  Vector3.cpp  Vector3.h  Vector3f.cpp  Vector3f.h
test/: CMakeLists.txt  TestHelloWorld.cpp  TestLinkedList.cpp  TestList.cpp  TestMathFunctions.cpp  TestVector3.cpp  TestVector3f.cpp  main.cpp
